--- a/MQX/View/AVPlayer/YNCAVPlayerView.xib
+++ b/MQX/View/AVPlayer/YNCAVPlayerView.xib
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="YNCFB_AVPlayerView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="YNCAVPlayerView">
             <rect key="frame" x="0.0" y="0.0" width="372" height="248"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -20,7 +24,7 @@
                                 <constraint firstAttribute="height" constant="20" id="8LO-f1-fw3"/>
                                 <constraint firstAttribute="width" constant="20" id="NUM-I0-ZlZ"/>
                             </constraints>
-                            <state key="normal" image="btn_stop_small"/>
+                            <state key="normal" image="btn_play_small"/>
                             <connections>
                                 <action selector="playOrPauseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="iEU-6V-4Tw"/>
                             </connections>
@@ -31,7 +35,7 @@
                                 <constraint firstAttribute="width" constant="20" id="GJh-pX-naf"/>
                                 <constraint firstAttribute="height" constant="20" id="Kud-D9-9yE"/>
                             </constraints>
-                            <state key="normal" image="danping"/>
+                            <state key="normal" image="btn_fullScreen"/>
                             <connections>
                                 <action selector="fullScreenAciton:" destination="iN0-l3-epB" eventType="touchUpInside" id="j5m-Uq-tBG"/>
                             </connections>
@@ -71,7 +75,7 @@
                                 <constraint firstAttribute="height" constant="3" id="hwR-cr-wgT"/>
                             </constraints>
                         </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="huatiaoanjian" translatesAutoresizingMaskIntoConstraints="NO" id="7dW-8q-9OM">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_sliderBtn" translatesAutoresizingMaskIntoConstraints="NO" id="7dW-8q-9OM">
                             <rect key="frame" x="93" y="13" width="20" height="20"/>
                             <gestureRecognizers/>
                             <constraints>
@@ -113,7 +117,7 @@
                         <constraint firstAttribute="width" constant="40" id="3he-bj-YDN"/>
                         <constraint firstAttribute="height" constant="40" id="xEK-3k-pY3"/>
                     </constraints>
-                    <state key="normal" title="Button" image="icon_returnLastPage"/>
+                    <state key="normal" image="icon_back"/>
                     <connections>
                         <action selector="backbtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="k1y-fS-Pmb"/>
                     </connections>
@@ -124,7 +128,7 @@
                         <constraint firstAttribute="width" constant="40" id="1gH-I7-WMa"/>
                         <constraint firstAttribute="height" constant="40" id="MO2-KO-v5V"/>
                     </constraints>
-                    <state key="normal" title="Button" image="play"/>
+                    <state key="normal" image="btn_play_big"/>
                     <connections>
                         <action selector="playOrPauseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="w0l-Ml-CBU"/>
                     </connections>
@@ -164,10 +168,10 @@
         </panGestureRecognizer>
     </objects>
     <resources>
-        <image name="btn_stop_small" width="16" height="16"/>
-        <image name="danping" width="20" height="20"/>
-        <image name="huatiaoanjian" width="20" height="20"/>
-        <image name="icon_returnLastPage" width="40" height="40"/>
-        <image name="play" width="40" height="40"/>
+        <image name="btn_fullScreen" width="20" height="20"/>
+        <image name="btn_play_big" width="40" height="40"/>
+        <image name="btn_play_small" width="30" height="30"/>
+        <image name="icon_back" width="40" height="40"/>
+        <image name="icon_sliderBtn" width="20" height="20"/>
     </resources>
 </document>
